kubernetes/apps/productivity/karakeep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep 
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - karakeep.tituslab.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-paperless-ngx
          port: 80
